--- a/package.json
+++ b/package.json
@@ -14,13 +14,14 @@
     "@fortawesome/fontawesome-free": "^6.7.2",
     "@google/generative-ai": "^0.11.3",
     "@next/font": "^14.2.15",
-    "@supabase/supabase-js": "^2.43.2",
+    "@supabase/supabase-js": "^2.50.0",
     "@tanstack/react-query": "^5.37.1",
     "@trpc/client": "^11.0.0-rc.316",
     "@trpc/next": "^11.0.0-rc.316",
     "@trpc/react-query": "^11.0.0-rc.316",
     "@trpc/server": "^11.0.0-rc.316",
     "bootstrap": "^5.3.3",
+    "jsonwebtoken": "^9.0.2",
     "next": "14.2.29",
     "react": "^18",
     "react-bootstrap": "^2.10.2",
